.metadata/.plugins/org.eclipse.cdt.ui/halleffect.build.log
20:07:16 **** Incremental Build of configuration Debug for project halleffect ****
make -j16 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103xB -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
../Core/Src/main.c:191:13: error: redefinition of 'MX_I2C1_Init'
  191 | static void MX_I2C1_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:64:8: note: previous definition of 'MX_I2C1_Init' with type 'void(void)'
   64 |   void MX_I2C1_Init(void)
      |        ^~~~~~~~~~~~
../Core/Src/main.c:191:13: warning: 'MX_I2C1_Init' defined but not used [-Wunused-function]
  191 | static void MX_I2C1_Init(void)
      |             ^~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j16 all" terminated with exit code 2. Build might be incomplete.

20:07:16 Build Failed. 2 errors, 1 warnings. (took 245ms)

